[project]
name = "miqro-alarm"
version = "0.3.0"
description = "A universal alarm service using MQTT as input and output."
authors = [{name = "Daniel Fett", email = "fett@danielfett.de"}]
readme = "README.md"
packages = [{include = "miqro_alarm"}]

[dependencies]
python = "^3.7"
miqro = "^1.2.3"
requests = "^2.28.1"
humanfriendly = "^10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.poetry.scripts]
miqro_alarm = { callable = "miqro_alarm:alarm.run" }

[project.scripts]
miqro_alarm = "miqro_alarm:alarm.run"

